--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: dtortera <dtortera@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2013/11/19 11:47:22 by dtortera          #+#    #+#              #
-#    Updated: 2015/02/16 17:10:16 by dtortera         ###   ########.fr        #
+#    Updated: 2016/07/20 13:21:58 by nchampot         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
